--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -111,7 +111,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.194.251;
+allow 114.41.8.48;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -516,6 +516,7 @@ allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
+allow 185.247.226.175;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
@@ -937,7 +938,6 @@ allow 209.141.54.218;
 allow 209.141.55.26;
 allow 209.141.58.254;
 allow 209.141.61.52;
-allow 209.38.36.128;
 allow 209.46.120.81;
 allow 212.21.66.6;
 allow 212.38.189.186;
@@ -1326,6 +1326,7 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
+allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1545,6 +1546,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
+allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::132;
@@ -1729,6 +1731,7 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.42.177.222;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1746,7 +1749,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1815,6 +1817,7 @@ allow 45.80.158.175;
 allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
+allow 45.80.158.36;
 allow 45.80.158.69;
 allow 45.80.158.97;
 allow 45.8.22.207;
@@ -1856,6 +1859,7 @@ allow 45.90.185.118;
 allow 45.90.185.119;
 allow 45.90.185.67;
 allow 45.90.185.68;
+allow 45.91.250.107;
 allow 45.9.156.100;
 allow 45.9.156.101;
 allow 45.9.168.103;
