--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -111,8 +111,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 114.41.8.48;
-allow 118.163.74.160;
+allow 114.41.26.8;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 119.28.139.55;
@@ -281,7 +280,6 @@ allow 185.132.53.6;
 allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
-allow 185.153.198.104;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
@@ -801,7 +799,6 @@ allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -950,6 +947,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -961,6 +959,7 @@ allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -1027,6 +1026,7 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1245,6 +1245,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1298,6 +1299,7 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1663,6 +1665,7 @@ allow 2a10:1fc0:10::fa6c:cac5;
 allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a11:6100:0:1e6a::1;
@@ -1837,26 +1840,6 @@ allow 45.84.107.55;
 allow 45.84.107.74;
 allow 45.84.107.76;
 allow 45.84.107.97;
-allow 45.90.185.100;
-allow 45.90.185.101;
-allow 45.90.185.102;
-allow 45.90.185.103;
-allow 45.90.185.104;
-allow 45.90.185.105;
-allow 45.90.185.106;
-allow 45.90.185.107;
-allow 45.90.185.108;
-allow 45.90.185.109;
-allow 45.90.185.110;
-allow 45.90.185.111;
-allow 45.90.185.112;
-allow 45.90.185.113;
-allow 45.90.185.114;
-allow 45.90.185.115;
-allow 45.90.185.116;
-allow 45.90.185.117;
-allow 45.90.185.118;
-allow 45.90.185.119;
 allow 45.90.185.67;
 allow 45.90.185.68;
 allow 45.91.250.107;
@@ -1893,6 +1876,7 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.230.119.146;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1955,7 +1939,6 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
-allow 80.85.246.128;
 allow 80.94.92.106;
 allow 80.94.92.92;
 allow 81.16.33.42;
@@ -2038,6 +2021,7 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
+allow 91.219.237.39;
 allow 91.227.114.153;
 allow 91.227.77.107;
 allow 91.227.77.108;
