--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -132,6 +132,7 @@ allow 136.175.8.45;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 138.68.144.236;
+allow 139.162.90.140;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.164.38.67;
@@ -947,6 +948,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -989,9 +991,9 @@ allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
-allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
+allow 2400:8902::f03c:95ff:fe1e:6065;
 allow 2400:8905::f03c:95ff:fe67:ec03;
 allow 2400:8907::f03c:95ff:fe79:8c79;
 allow 2400:d320:2202:5765::1;
@@ -1241,7 +1243,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
+allow 2a02:2479:0:6e00::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
@@ -1294,7 +1296,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1866,12 +1867,10 @@ allow 45.9.168.18;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
-allow 45.95.169.130;
 allow 45.95.169.14;
 allow 45.95.169.230;
 allow 45.95.169.252;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1891,7 +1890,6 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.230.119.146;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
