Update lists at 20250518-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -111,7 +111,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.191.137;
+allow 1.170.230.236;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -132,7 +132,6 @@ allow 13.53.217.247;
 allow 136.175.8.45;
 allow 136.244.111.163;
 allow 138.59.18.110;
-allow 138.68.144.236;
 allow 139.162.90.140;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -197,9 +196,10 @@ allow 172.104.244.62;
 allow 172.105.174.195;
 allow 172.105.20.12;
 allow 172.232.209.254;
+allow 172.233.240.180;
 allow 172.233.82.41;
 allow 172.234.228.174;
-allow 172.81.131.139;
+allow 172.234.245.150;
 allow 172.81.131.156;
 allow 172.81.132.94;
 allow 173.0.3.111;
@@ -950,7 +950,6 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1021,6 +1020,8 @@ allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
+allow 2600:3c07::f03c:95ff:fe1e:22e;
+allow 2600:3c0a::f03c:95ff:fe1e:2a6;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
@@ -1248,7 +1249,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2479:0:6e00::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
@@ -1689,7 +1689,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.42.177.222;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1707,6 +1706,7 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1975,6 +1975,7 @@ allow 92.246.84.133;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
