--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -111,7 +111,7 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.168.191.137;
+set_real_ip_from 1.170.230.236;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -132,7 +132,6 @@ set_real_ip_from 13.53.217.247;
 set_real_ip_from 136.175.8.45;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
-set_real_ip_from 138.68.144.236;
 set_real_ip_from 139.162.90.140;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
@@ -197,9 +196,10 @@ set_real_ip_from 172.104.244.62;
 set_real_ip_from 172.105.174.195;
 set_real_ip_from 172.105.20.12;
 set_real_ip_from 172.232.209.254;
+set_real_ip_from 172.233.240.180;
 set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
-set_real_ip_from 172.81.131.139;
+set_real_ip_from 172.234.245.150;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
@@ -950,7 +950,6 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
-set_real_ip_from 217.154.21.121;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
@@ -1021,6 +1020,8 @@ set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c04::f03c:95ff:fe41:d42c;
+set_real_ip_from 2600:3c07::f03c:95ff:fe1e:22e;
+set_real_ip_from 2600:3c0a::f03c:95ff:fe1e:2a6;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
@@ -1248,7 +1249,6 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
-set_real_ip_from 2a02:2479:0:6e00::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
@@ -1689,7 +1689,6 @@ set_real_ip_from 2c0f:6c0:0:4::95ea;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.42.177.222;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
@@ -1707,6 +1706,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1975,6 +1975,7 @@ set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
+set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
