Update lists at 20250518-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -15,6 +15,7 @@ allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
+allow 103.60.12.8;
 allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
@@ -110,6 +111,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
+allow 1.170.202.152;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -127,7 +129,6 @@ allow 130.193.15.79;
 allow 13.126.29.181;
 allow 13.232.154.134;
 allow 135.125.239.70;
-allow 13.53.217.247;
 allow 136.175.8.45;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -160,7 +161,6 @@ allow 154.41.95.2;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
-allow 16.16.127.136;
 allow 16.16.97.55;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -203,10 +203,10 @@ allow 172.234.228.174;
 allow 172.234.245.150;
 allow 172.81.131.156;
 allow 172.81.132.94;
+allow 172.81.135.157;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
-allow 175.131.49.119;
 allow 176.118.193.33;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -221,7 +221,6 @@ allow 176.65.149.96;
 allow 176.97.114.202;
 allow 178.162.175.5;
 allow 178.17.170.144;
-allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -283,6 +282,7 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.132.53.6;
+allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -951,6 +951,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1228,7 +1229,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
-allow 2a00:1dc0:caff:15::45dc;
 allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:68::1;
 allow 2a00:1dc0:caff:73::a568;
@@ -1249,6 +1249,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1304,6 +1305,7 @@ allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
+allow 2a04:52c0:115:3fe8::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1653,6 +1655,7 @@ allow 2a12:a800:2:1:45:138:16:248;
 allow 2a12:a800:2:1:45:138:16:42;
 allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
+allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:167;
@@ -1736,6 +1739,7 @@ allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.139.50.202;
 allow 45.139.50.204;
+allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.133;
@@ -1855,6 +1859,7 @@ allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
+allow 5.255.110.29;
 allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
