--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -338,7 +338,6 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
-deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:68::1;
 deny 2a00:1dc0:caff:73::a568;
@@ -359,6 +358,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -414,6 +414,7 @@ deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
+deny 2a04:52c0:115:3fe8::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -763,6 +764,7 @@ deny 2a12:a800:2:1:45:138:16:248;
 deny 2a12:a800:2:1:45:138:16:42;
 deny 2a12:a800:2:1:45:138:16:69;
 deny 2a12:a800:2:1:45:138:16:76;
+deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
 deny 2a12:a800:2:1:45:141:215:114;
 deny 2a12:a800:2:1:45:141:215:167;
