Update lists at 20250519-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -111,7 +111,7 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.209.78;
+allow 114.41.27.53;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -147,6 +147,7 @@ allow 146.59.126.232;
 allow 146.59.231.4;
 allow 147.45.116.145;
 allow 148.113.152.91;
+allow 149.102.153.38;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
@@ -207,6 +208,8 @@ allow 173.0.3.111;
 allow 173.212.215.221;
 allow 173.237.206.68;
 allow 173.255.198.243;
+allow 173.44.141.34;
+allow 175.131.49.119;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.58.100.98;
@@ -652,7 +655,6 @@ allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -671,7 +673,6 @@ allow 195.47.238.91;
 allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
-allow 195.88.74.206;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -684,7 +685,6 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
-allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -715,7 +715,6 @@ allow 2001:41d0:601:1100::6524;
 allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1100::57d3;
-allow 2001:41d0:701:1100::912e;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:4b20:12:f001::105;
@@ -1046,7 +1045,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1251,13 +1249,13 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
+allow 2a02:c204:2261:2270::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
 allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -1304,7 +1302,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1353,6 +1350,7 @@ allow 2a09:b280:fe01:61::a;
 allow 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:64c0:f802:1::a;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1556,7 +1554,6 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
 allow 2a0c:e300::23;
-allow 2a0d:8140:1fff:3ccd::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::132;
 allow 2a0d:bbc7:0:1::1df;
@@ -1628,7 +1625,6 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a11:6100:0:1e6a::1;
@@ -1647,7 +1643,6 @@ allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
 allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
-allow 2a12:a800:2:1:45:138:16:113;
 allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:138:16:222;
@@ -1659,6 +1654,7 @@ allow 2a12:a800:2:1:45:138:16:248;
 allow 2a12:a800:2:1:45:138:16:42;
 allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
+allow 2a12:a800:2:1:45:141:215:110;
 allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:167;
@@ -1726,7 +1722,6 @@ allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.138.16.107;
-allow 45.138.16.113;
 allow 45.138.16.161;
 allow 45.138.16.164;
 allow 45.138.16.178;
@@ -1741,6 +1736,7 @@ allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.139.50.202;
 allow 45.139.50.204;
+allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
 allow 45.141.215.133;
@@ -1837,7 +1833,6 @@ allow 45.95.169.14;
 allow 45.95.169.230;
 allow 45.95.169.252;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1847,7 +1842,6 @@ allow 47.254.142.180;
 allow 47.89.193.230;
 allow 5.104.86.6;
 allow 51.15.59.15;
-allow 51.195.107.220;
 allow 51.195.166.174;
 allow 51.222.142.67;
 allow 51.38.225.46;
@@ -1856,7 +1850,6 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.230.119.146;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1928,7 +1921,6 @@ allow 81.17.28.95;
 allow 81.181.104.22;
 allow 8.208.26.177;
 allow 8.209.106.19;
-allow 82.153.138.177;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
