--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -15,7 +15,6 @@ deny 2001:41d0:601:1100::6524;
 deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
 deny 2001:41d0:701:1100::57d3;
-deny 2001:41d0:701:1100::912e;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:4b20:12:f001::105;
@@ -155,7 +154,6 @@ deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1362::2;
-deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
 deny 2605:6400:10:58f:8768:8283:1a62:bdc6;
 deny 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -359,13 +357,13 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
+deny 2a02:c204:2261:2270::1;
 deny 2a02:ec0:209:10::4;
 deny 2a02:ed06::222;
 deny 2a03:4000:13:7c3:dead:beef:ca1f:1337;
@@ -412,7 +410,6 @@ deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -461,6 +458,7 @@ deny 2a09:b280:fe01:61::a;
 deny 2a0a:3840:1337:127:0:b9c1:7f4c:1337;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 deny 2a0b:64c0:f802:1::a;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -664,7 +662,6 @@ deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:e300::23;
-deny 2a0d:8140:1fff:3ccd::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::132;
 deny 2a0d:bbc7:0:1::1df;
@@ -736,7 +733,6 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a11:6100:0:1467::;
 deny 2a11:6100:0:156b::;
 deny 2a11:6100:0:1e6a::1;
@@ -755,7 +751,6 @@ deny 2a12:a800:2:1:185:241:208:71;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:185:241:208:92;
 deny 2a12:a800:2:1:45:138:16:107;
-deny 2a12:a800:2:1:45:138:16:113;
 deny 2a12:a800:2:1:45:138:16:164;
 deny 2a12:a800:2:1:45:138:16:178;
 deny 2a12:a800:2:1:45:138:16:222;
@@ -767,6 +762,7 @@ deny 2a12:a800:2:1:45:138:16:248;
 deny 2a12:a800:2:1:45:138:16:42;
 deny 2a12:a800:2:1:45:138:16:69;
 deny 2a12:a800:2:1:45:138:16:76;
+deny 2a12:a800:2:1:45:141:215:110;
 deny 2a12:a800:2:1:45:141:215:111;
 deny 2a12:a800:2:1:45:141:215:114;
 deny 2a12:a800:2:1:45:141:215:167;
