Update lists at 20250520-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -72,7 +72,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -110,7 +109,6 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 114.41.12.192;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -128,6 +126,7 @@ allow 130.193.15.79;
 allow 13.126.29.181;
 allow 13.232.154.134;
 allow 135.125.239.70;
+allow 136.175.8.45;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 138.68.144.236;
@@ -158,6 +157,7 @@ allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.41.95.1;
 allow 154.41.95.2;
+allow 154.53.58.161;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
@@ -1070,7 +1070,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1118,6 +1117,7 @@ allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:1d1::100;
+allow 2605:a141:2261:4410::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:120:c74::1;
 allow 2607:5300:201:3100::35c5;
@@ -1626,7 +1626,6 @@ allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
@@ -1696,6 +1695,7 @@ allow 2c0f:6c0:0:3::479d;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.42.177.222;
 allow 31.44.238.25;
 allow 35.0.127.52;
@@ -1714,7 +1714,6 @@ allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1954,6 +1953,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1980,7 +1980,6 @@ allow 91.208.75.178;
 allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
-allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.219.237.39;
 allow 91.227.114.153;
