--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -176,7 +176,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -224,6 +223,7 @@ allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:1d1::100;
+allow 2605:a141:2261:4410::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:120:c74::1;
 allow 2607:5300:201:3100::35c5;
@@ -731,7 +731,6 @@ allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
